test/bad/generics/type08.px

func f<Any A, Any B, Any C>([A*B*C] p) def
    return

f([(1, 2)])
